* Mar 29 2019  Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.1.2-0
- Replaced all simpcat resources with puppetlabs concat resources.

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.2-0
- Use simplib::validate_net_list in lieu of deprecated Puppet 3
  validate_net_list

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Jan 11 2019 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.1.1-0
- Remove references to `rsync::server::global`
- Update version requirement for pupmod-simp-rsync

* Thu Nov 01 2018 Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.1.0-0
- Static asset updates for puppet 5
- Update badges and contribution guide URL in README.md

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Changed $named::install::ensure from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Wed Jul 11 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.1.0-0
- Support for Puppet5/OEL
- Resolved issue with chroot acceptance tests

* Fri Mar 16 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.3-0
- Provide override file for named-chroot.service instead of
  modifying the vendor-provided service file.
- Use simplib::assert_metadata() for OS validation
- Replace Puppet3 version of passgen() with  simplib::passgen()

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Confine puppet version in metadata.json

* Fri Apr 07 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.1-0
- Chroot rsync files are now globbed so they are placed directly
  inside of the specified chroot.

* Mon Dec 19 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated global catalysts and strong typed the module
- Made chrooting logic less complicated
- ALL of the spec tests

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Updated to use the environment-aware rsync in SIMP 6
